hide unused section headers from the TOC

--- a/dreck.tex
+++ b/dreck.tex
@@ -19,14 +19,14 @@ This document was last compiled on \today.
 
 
 \newpage
-\section{Day 1: Quillen's theorem}
+\section*{Day 1: Quillen's theorem}
 
 \begin{abstract}
 For certain ring spectra $E$, we describe a construction of a very rich algebro-geometric category in which $E$--homology is valued, called the \textit{context} for $E$.  We also give a tour of the theory of Thom spectra and announce Quillen's description of the context for the Thom spectrum of the complex $J$--homomorphism.
 \end{abstract}
 
 
-\subsection{Homology cooperations and their structure}
+\subsection*{Homology cooperations and their structure}
 
 Let's get right to the task advertised in the abstract: for a ring spectrum $E$, we're looking to use algebraic geometry to capture as much of the structure of the output of $E_*$ and $E^*$.  Consider first the case $E = H\F_2$ of ordinary mod--$2$ cohomology, where $H\F_2^*$ is naturally valued in modules for the ``Steenrod algebra'': \[\mathcal A^* \otimes H\F_2^*(X) \to H\F_2^*(X).\]  This action is very useful, but $\mathcal A^*$ has the unfortunate feature of being a highly \emph{noncommutative} ring, which makes it a clumsy object from the perspective of algebraic geometry.  However, the Steenrod algebra is actually a Hopf algebra, and its linear dual $\mathcal A_*$ is \emph{commutative} and it \emph{coacts} on homology: \[(H\F_2)_* X \to (H\F_2)_* X \otimes \mathcal A_*.\]  A theorem of Milnor gives a concise description of this dual Hopf algebra:
 \begin{theorem}[Milnor]
@@ -76,7 +76,7 @@ This is a lot of fancy words for some simple cooperations, but I claim that the 
 
 
 
-\subsection{A general Thom isomorphism}
+\subsection*{A general Thom isomorphism}
 
 Today's punchline theorem is about the context $\M_{T(J)}$ of a certain ring spectrum $T(J)$ coming from the theory of Thom spectra.  Once I explain the notation, some of you might recognize this as the complex bordism spectrum, but I don't think I can count on that to quickly supply us with the background we need to recognize $\M_{T(J)}$.  Instead, I'll construct $T(J)$ from scratch in a way that gives us the statements we need for free.  Additionally, this takes us through some interesting tools available to a ``modern'' homotopy theorist --- where ``modern'' primarily means ``geometrically uninclined''.
 
@@ -106,7 +106,7 @@ This is called ``the Thom isomorphism'', and we should take a moment to ponder i
 
 
 
-\subsection{Statement of Quillen's theorem}
+\subsection*{Statement of Quillen's theorem}
 
 We've gone far too long without giving an example.  Let $\CP^\infty \simeq BU(1)$ be the classifying space for line bundles, and using $U(1) \simeq S^1$ pass to its  circle--bundle to get
 \begin{center}
@@ -164,14 +164,14 @@ This is a pretty powerful theorem.\footnote{This situation has a strange feature
 
 
 \newpage
-\section{Day 2: E--theory and periodic self-maps}
+\section*{Day 2: E--theory and periodic self-maps}
 
 \begin{abstract}
 We outline a program for studying the functor $\M_{T(J)}(X)$ by first studying the local structure of $\moduli{fg}$.  After a brief tour of the arithmetic literature on formal group laws, we deduce the existence of certain homology theories: the Morava $E$-- and $K$--theories.  We then give examples of local-to-global methods in algebraic topology: for instance, a condition for detecting non-nilpotent self-maps.
 \end{abstract}
 
 
-\subsection{Some philosophy on flat maps}
+\subsection*{Some philosophy on flat maps}
 
 Yesterday, we developed a rich target for $T(J)$--homology: sheaves over an algebro-geometric object $\M_{T(J)}$.  Furthermore, Quillen's theorem gave an identification $\M_{T(J)} \simeq \moduli{fg}$.  Our initial goal for today is to outline a program by which we can leverage this to study $T(J)$.  Abstractly, one can hope to study any sheaf, including $\M_{T(J)}(X)$, by analyzing its stalks.  The main utility of Quillen's theorem is that it gives us access to a concrete model of $\M_{T(J)}$, so that we can determine where to even look for those stalks.
 
@@ -193,7 +193,7 @@ such that the diagonal arrow is flat, the functor \[R_*(X) := T(J)_*(X) \otimes_
 This appears to be a moot point, however, as it is unreasonable to expect this idea to apply to computing stalks: the inclusion of a closed substack (and so, in particular, a closed point $\Gamma$) is flat only in highly degenerate cases.  This can be repaired: the inclusion of the formal completion of a closed substack of a Noetherian\footnote{$\moduli{fg}$ is not Noetherian, but we will find that each closed point except $\G_a$ lives in an open substack that happens to be Noetherian.} stack is flat, and so we naturally become interested in the infinitesimal deformation spaces of the closed points $\Gamma$ on $\moduli{fg}$.  If we can analyze those, then Landweber's theorem will produce homology theories called $E_\Gamma$.  Moreover, if we find that these deformation spaces are \emph{smooth}, it will follow that their deformation rings support regular sequences.  In this excellent case, by taking the regular quotient we will be able to recover a \emph{homology theory} $K_\Gamma$ which plays the role of computing the stalk of $\M_{T(J)}(X)$ at $\Gamma$.\footnote{Incidentally, this program has no content when applied to $\M_{H\F_2}$, as $\Spec \F_2$ is simply too small.}
 
 
-\subsection{Local structure of the moduli of formal groups}
+\subsection*{Local structure of the moduli of formal groups}
 
 Motivated by the program above, we now set out to describe the local structure of $\moduli{fg}$.  Noting that formal group laws arise as analytic germs of multiplication laws on Lie groups, we will first take a cue from Lie theory and attempt to define exponential and logarithm functions for a given formal group law $F$ over a ring $R$.  In Lie theory, this is accomplished by studying left--invariant differentials: a $1$--form $f(x) dx$ is said to be left--invariant under $F$ when \[f(x) dx = f(y +_F x) d(y +_F x) = f(y +_F x) \frac{\partial(y +_F x)}{\partial x} dx.\]  Restricting to the origin by setting $y = 0$, we deduce the condition \[f(0) = f(x) \cdot \left. \frac{\partial(y +_F x)}{\partial x} \right|_{y=0}.\]  If $R$ is a $\Q$--algebra, then setting the boundary condition $f(0) = 1$ and integrating against $x$ yields \[\log_F(x) = \int \left( \left. \frac{\partial(y +_F x)}{\partial x} \right|_{y=0} \right)^{-1} dx.\]  To see that the series $\log_F$ has the claimed homomorphism property, note that \[\frac{\partial \log_F(y +_F x)}{\partial x} = f(y +_F x) d(y +_F x) = f(x) dx = \frac{\partial \log_F(x)}{\partial x},\] so $\log_F(y +_F x)$ and $\log_F(x)$ differ by a constant.  Checking at $x = 0$ shows that the constant is $\log_F(y)$, hence \[\log_F(x +_F y) = \log_F(x) + \log_F(y).\]  We thus deduce that $\moduli{fg} \times \Spec \Q$ is contractible: every formal group law is uniquely isomorphic to $\G_a$.\todo{What about rescaling? Should you be honest and call this $\moduli{fg}^{(1)}$?}
 
@@ -239,7 +239,7 @@ Having stood on the shoulders of all these arithmetic geometers, we can now put 
 
 
 
-\subsection{E--theories and periodic self-maps}
+\subsection*{E--theories and periodic self-maps}
 
 Having constructed these ``stalk'' homology theories, I want to show that you can actually perform analyses of the kind I was describing at the beginning of today.  Our example case is a famous theorem: the solution of Ravenel's nilpotence conjectures by Devinatz, Hopkins, and Smith.  Their theorem concerns spectra which ``detect nilpotence'' in the following sense:
 
@@ -294,14 +294,14 @@ Set $E = \bigvee_{\text{primes $p$}} \bigvee_{d \in [0, \infty]} K(d)$, so that 
 
 
 \newpage
-\section{Day 3: Chromatic localizations}
+\section*{Day 3: Chromatic localizations}
 
 \begin{abstract}
 We now try to superimpose some of the structure seen yesterday in $\moduli{fg}$ directly onto the category of finite spectra.  This summons certain Bousfield localizations, and we describe their primary application to the stable category.
 \end{abstract}
 
 
-\subsection{Classification of thick subcategories}
+\subsection*{Classification of thick subcategories}
 
 Our first goal for today is to apply these local methods once more to get a positive answer to Ravenel's question about finite spectra and periodic self-maps.  The solution to this problem passes through some now-standard machinery for triangulated $\otimes$--categories.
 
@@ -344,7 +344,7 @@ These maps are guaranteed by very careful study of Adams spectral sequences.
 \end{proof}
 
 
-\subsection{Balmer spectra and chromatic localization}
+\subsection*{Balmer spectra and chromatic localization}
 
 As part of a broad attempt to analyze a geometric object through its modules, Paul Balmer has demonstrated the following theorem:
 
@@ -395,7 +395,7 @@ L_{d-1} \arrow{r} & L_{d-1} \widehat L_d.
 \end{enumerate}
 
 
-\subsection{Chromatic dissembly}
+\subsection*{Chromatic dissembly}
 
 There are also considerably more complicated facts known about these functors:
 \begin{theorem}[Hopkins--Ravenel]
@@ -421,7 +421,7 @@ In the case $d = 1$, $\operatorname{Aut}(\Gamma_1) = \Z_p^\times$ and it acts on
 
 
 
-\section{-------------------------}
+\section*{-------------------------}
 
 
 
@@ -445,44 +445,44 @@ Dieudonn\'e: Presentation of the endomorphism ring of the generic height $d$ law
 
 
 \newpage
-\section{-----------------------------}
+\section*{-----------------------------}
 
 Nat's MPIM notes
 
 (The first thing Nat says is that Vesna already introduced $tmf$ in the first two talks and that Tobi was going to introduce the chromatic program in the fifth talk.)
 
-\section{Introduction: K--theory}
-    \subsection{Quillen's theorem}
-    \subsection{The (integral) Conner--Floyd isomorphism}
-    \subsection{Total power operations in equivariant K--theory}
-    \subsection{Hopf invariant one}
+\section*{Introduction: K--theory}
+    \subsection*{Quillen's theorem}
+    \subsection*{The (integral) Conner--Floyd isomorphism}
+    \subsection*{Total power operations in equivariant K--theory}
+    \subsection*{Hopf invariant one}
 
-\section{Morava E--theory and the LEFT}
-    \subsection{Examples of formal group laws}
-    \subsection{Lubin--Tate deformation theory}
-    \subsection{Definition of E--theory using LEFT}
+\section*{Morava E--theory and the LEFT}
+    \subsection*{Examples of formal group laws}
+    \subsection*{Lubin--Tate deformation theory}
+    \subsection*{Definition of E--theory using LEFT}
 
-\section{Morava E--theory as a commutative ring spectrum}
-    \subsection{The Goerss--Hopkins--Miller theorem}
-    \subsection{Devinatz--Hopkins on fixed point spectral sequences}
-    \subsection{TMF restricted to the supersingular locus}
-    \subsection{The Goerss--Henn--Mahowald--Rezk resolution}
+\section*{Morava E--theory as a commutative ring spectrum}
+    \subsection*{The Goerss--Hopkins--Miller theorem}
+    \subsection*{Devinatz--Hopkins on fixed point spectral sequences}
+    \subsection*{TMF restricted to the supersingular locus}
+    \subsection*{The Goerss--Henn--Mahowald--Rezk resolution}
 
-\section{Morava E--theory and algebraic geometry}
-    \subsection{$\mathbb C \mathrm P^\infty_E$ as a formal scheme}
-    \subsection{$BA^*_E$ and $BU(n)_E$ as formal schemes}
-    \subsection{Strickland's theorem on finite symmetric groups}
-    \subsection{Power operations and Ando's theorem}
+\section*{Morava E--theory and algebraic geometry}
+    \subsection*{$\mathbb C \mathrm P^\infty_E$ as a formal scheme}
+    \subsection*{$BA^*_E$ and $BU(n)_E$ as formal schemes}
+    \subsection*{Strickland's theorem on finite symmetric groups}
+    \subsection*{Power operations and Ando's theorem}
 
-\section{Morava $E$--theory and representation theory}
-    \subsection{The case for equivariant and $p$--adic $K$--theory}
-    \subsection{The classical Chern character}
-    \subsection{The HKR character map}
+\section*{Morava $E$--theory and representation theory}
+    \subsection*{The case for equivariant and $p$--adic $K$--theory}
+    \subsection*{The classical Chern character}
+    \subsection*{The HKR character map}
 
 
 \newpage
 
-\section{Formal schemes for spaces}
+\section*{Formal schemes for spaces}
 
 The main goal of this talk is to communicate a way to organize computational results from algebraic topology in your head.  If you flip back through the literature in the 70s and 80s (and we will do some of that ourselves in a moment), you'll find yourself very envious of such a system.  People back then were writing these enormous papers with enormous manipulations of enormous formulas, and there was a real industry built around having sufficient facility with, say, the formula for the right--unit for Brown--Peterson cohomology, or with being adept with multi-index bookkeeping.  This was very hard work then, and it's fairly hard work now to go back and try to understand what these topologists were up to.  Attempting to untangle any of it will imbue you with an immediate appreciation for any kind of method that will allow you to compress one of these results into a small space.
 
@@ -496,11 +496,11 @@ The prototypical example of this construction is its value on $X = \CP^\infty$ f
 \end{enumerate}
 
 
-\section{A second example: $BU(n)_E$}
+\section*{A second example: $BU(n)_E$}
 
 To a certain crowd, illustrating features of this functor as applied to $\CP^\infty$ is old hat; anytime complex orientations are mentioned, formal group laws also arise, and we really weren't exploring anything beyond that.  The thesis I want to advance is that Neil's construction continues to be useful when applied to other spaces too, and the somewhat more serious examples we'll explore are the spaces $BU(n)$.
 
-\subsection{$BU(n)_E \cong \A^n$}
+\subsection*{$BU(n)_E \cong \A^n$}
 
 The space $BU(n)$ classifies complex vector bundles of rank $n$; suppose that we have such a bundle $V$ over a space $X$.  Associated to $V$ we can form its fiberwise projectivization $\P(V)$, which is a $\CP^{n-1}$--bundle over $X$.  The space $\P(V)$ itself comes equipped with a canonical line bundle, and hence a map \[\P(V) \xrightarrow{p_V} X \times \CP^\infty.\]
 
@@ -523,7 +523,7 @@ A complex orientation of $E$ begets an isomorphism $E^* BU(n) \cong E^*\llbracke
 \noindent In our language, this allows us to identify the formal scheme $BU(n)_E$ as the smooth formal scheme $BU(n)_E \cong \A^n$.
 
 
-\subsection{$BU(n)_E \cong \Div_n^+ \CP^\infty_E$}
+\subsection*{$BU(n)_E \cong \Div_n^+ \CP^\infty_E$}
 
 We can do better than this.  Applying our formal scheme functor to $p_V$, the same theorem asserts that $\P(V)_E \to X_E \times \CP^\infty_E$ is a closed inclusion, i.e., an effective divisor of degree $n$ on $\CP^\infty_E$, or a $E^* X$--point of $\Div_n^+ \CP^\infty_E$.
 
@@ -566,7 +566,7 @@ From the example at the top of the hour, we know what the Chern polynomial of a 
 
 
 
-\section{$BU[2k, \infty)$}
+\section*{$BU[2k, \infty)$}
 
 Given these descriptions, it's easy to take the colimit in $n$ to get a description of $BU_E$: just as $BU$ classifies stable vector bundles of virtual rank zero, $BU_E \cong \Div_0 \CP^\infty_E$ classifies stable divisors of virtual weight zero.  Eliminating this weight condition, we also have $(BU \times \Z)_E \cong \Div \CP^\infty_E$.  These two spaces suggest a new avenue of generalization, as they are both spaces in the connective complex $K$--theory spectrum:
 \begin{align*}
@@ -652,11 +652,11 @@ In this first chapter, we introduce many of the basic players from chromatic hom
 
 \noindent We write $\CatOf{C}(X, Y)$ for the set of arrows in a locally small category $\CatOf{C}$ with source $X$ and target $Y$.
 
-\section{Schemes and formal schemes}\label{SchemesAndFormalSchemes}
+\section*{Schemes and formal schemes}\label{SchemesAndFormalSchemes}
 
 Throughout this document, we will make use of algebraic geometry and also of coalgebras and coalgebraic geometry.  Motivation for this will be made in \Cref{BasicApplicationsToTopology} and \Cref{KLocalCategory}, but it's useful first to record the basic tools involved.
 
-\subsection{Essentials of algebraic geometry}
+\subsection*{Essentials of algebraic geometry}
 
 The essential idea of scheme theory is to make commutative algebra look formally categorically similar to the study of moduli objects in topology and geometry.  For example, just as cohomology classes in $H^n(X; G)$ correspond naturally to homotopy classes of maps \[X \to K(G, n),\] by fixing an algebra $A$ and studying it by maps $A \to T$ for test rings $T$ we will often see that $A$ has a fruitful interpretation as a moduli--theoretic object.  To this end, we record our first definition:
 
@@ -736,7 +736,7 @@ Both \Cref{A1Example} and \Cref{GmExample} are examples of schemes with further 
 These assemble to make $\mathbb G_m$ into a \textit{group scheme}, i.e., an abelian group object in the category of affine schemes.  Similarly, the functor $\mathbb A^1$ is valued in commutative algebras, so it is a \textit{ring scheme}, i.e., it has addition and subtraction maps which intertwine with the multiplication map described above.
 \end{remark}
 
-\subsection{Finite schemes and formal schemes}
+\subsection*{Finite schemes and formal schemes}
 
 The most basic and well--behaved class of affine schemes is that of \textit{finite} affine schemes $X$ defined over a field $k$, where ``finite'' means that $X$ has a chart $X = \Spec A$ where $A$ is a $k$--algebra which is finitely generated as a $k$--module.
 \begin{example}\label{DefnA1n}
@@ -842,7 +842,7 @@ In particular, for $M$ the coideal of definition of a closed inclusion of coalge
 The scheme $\Spf S[\eps] / (\eps^2)$ used in the first construction could also be called $\A^{1,(1)}_S$, as it participates in the ind--system defining the formal affine line over $S$.  Thus, one can more generally consider the collection of maps to $X$ from $\A^{1,(j)}_S = \Spf S[x] / (x^{j+1})$ participating in a similar commuting triangle, altogether called the $j$--jets at $s$ (cf.\ \Cref{DefnA1n}).
 \end{remark}
 
-\subsection{Sheaves of modules}
+\subsection*{Sheaves of modules}
 
 Finally, we note that the theory of $A$--modules is visible to the affine scheme $\Spec A$:
 \begin{definition}[{\cite[Definition 2.42, Proposition 2.46]{StricklandFSFG}}]\label{QCohDefinition}
@@ -879,7 +879,7 @@ Dually, one can define comodules for a coalgebra and the quasicoherent sheaves t
 
 
 
-\section{Formal Lie groups}\label{FormalLieGroups}
+\section*{Formal Lie groups}\label{FormalLieGroups}
 
 One of the applications of \Cref{MapsOfAffineSpaces} is the insertion of some Lie theory into algebraic geometry.  In a coordinate chart centered at the identity element of a $n$--dimensional Lie group, the multiplication law of the Lie group expands into a $n$--tuple of $(2n)$--variate power series.  Interpreting this as a morphism \[\A^{2n} \cong \A^n \times \A^n \to \A^n,\] this inspires the following defintion:
 \begin{definition}\label{DefinitionOfDimension}
@@ -968,7 +968,7 @@ The completion of the inclusion of the closed point $\Spec \F_p \to \Spec \Z$ gi
 \end{align*}
 \end{example}
 
-\subsection{The moduli of formal groups}
+\subsection*{The moduli of formal groups}
 
 Let us return to considering formal groups by trying to understand their moduli.  We have a fairly thorough classification both of formal groups and formal group laws, due to various arithmetic geometers.
 
@@ -998,7 +998,7 @@ Altogether, this makes the pair $(\Spec L, \Spec L \times \moduli{PS}^{\gpd})$ i
 It will also be useful to define an auxiliary moduli problem: the moduli of formal groups equipped with a specified unit tangent vector.  To form this, set $\moduli{SPS}$ to be the further submoduli of $\moduli{PS}^{\gpd}$ of those power series with leading term $x$ (i.e., $a_1 = 1$).  Then, we make the definition \[\moduli{fg}^{(1)} := \Spec L \mmod (\Spec L \times \moduli{SPS}).\]  This moduli has a $\mathbb G_m$--action by rescaling the tangent vector, and it follows that \[\moduli{fg}^{(1)} \mmod \mathbb G_m \simeq \moduli{fg}.\]
 \end{definition}
 
-\subsection{The rational moduli of formal groups}
+\subsection*{The rational moduli of formal groups}
 
 The behavior of $\moduli{fg}$ organizes substantially after localizing at an arithmetic prime, which we investigate now.  At the generic point, its behavior is very simple:
 
@@ -1013,7 +1013,7 @@ We say that a $1$--form $f(x) dx$ is (left--)invariant under $F$ if the followin
 It is worth remarking that we only need to be able to divide by integers in order to define additive logarithms.  This contrasts with the positive characteristic case, where we also need to be able to take roots to put formal group laws into a canonical form; see \Cref{DefinitionOfDieudonneModules}.
 \end{remark}
 
-\subsection{The $p$--local moduli of formal groups}
+\subsection*{The $p$--local moduli of formal groups}
 
 At finite primes, the classification is considerably more involved.  In the rest of the section, $\moduli{fg}$ implicitly refers to the localization $\moduli{fg} \times \Spec \Z_{(p)}$.
 \begin{lemma}[{\cite{Cartier}}]\label{AllFGLsCanBePTypical}
@@ -1114,7 +1114,7 @@ Let $K$ be a local number field with residue field $k$ and let $D$ be the divisi
 
 
 
-\section{Basic applications to topology}\label{BasicApplicationsToTopology}
+\section*{Basic applications to topology}\label{BasicApplicationsToTopology}
 
 These elements of algebraic geometry make contact with homotopy theory via cohomology functors.  For a ring spectrum $E$ and space $X$, the homotopy groups $\pi_* E = E_*$ and cohomology groups $E^* X$ both form rings, and so we can employ the language of affine algebraic geometry to study them.  For the coefficient ring, consider the following construction:
 
@@ -1308,7 +1308,7 @@ It is tempting to think of the pro-spectrum $\{F(X_\alpha, \S)\}$ associated to 
 
 
 
-\subsection{Fields in stable homotopy theory}
+\subsection*{Fields in stable homotopy theory}
 
 We conclude this section with some remarks on ``field cohomology theories'' in stable homotopy theory.  A field $k$ in commutative algebra is a commutative ring characterized by the property that its category of modules is free under direct sum on the single generator $k$ itself.  Analogously, we make the following definition:
 
@@ -1346,7 +1346,7 @@ Paul Balmer has given a procedure for associating a space $\Spec \CatOf C$ to a 
 
 
 
-\section{The $\Gamma$--local stable category}\label{KLocalCategory}
+\section*{The $\Gamma$--local stable category}\label{KLocalCategory}
 
 To fully employ the arithmetic geometry attached to Morava's cohomology theories, it is common to move to the associated ``local'' category --- i.e., to declare that spectra which are $K_\Gamma$--acyclic are in fact contractible, or equivalently to declare that maps which are $K_\Gamma$--homology isomorphisms are in fact weak homotopy equivalences.  This eliminates the ``pathology'' of topological phenomena which are invisible to $K_\Gamma$, and so more tightly binds the behavior of $\CatOf{Spectra}$ to $K_\Gamma$.  For reasons to be discussed in this section, we will refer to this simply as the ``$\Gamma$--local category'' with localization functor $L_\Gamma$, suppressing the letter ``$K$''.
 
@@ -1356,7 +1356,7 @@ When $\Gamma$ has finite height $d$ this category has fascinating properties, ma
 \textbf{From here on, we will always consider $d$ to be finite and positive unless otherwise stated.}
 \end{center}
 
-\subsection{Continuous $E$--theory}\label{sec:ContinuousEThy}
+\subsection*{Continuous $E$--theory}\label{sec:ContinuousEThy}
 
 To begin our study of the $\Gamma$--local category, we cite some bulk results which eludicate features of the localization functor:
 \begin{theorem}\label{HoveyMooreSpectrumLemma}
@@ -1436,7 +1436,7 @@ The functor $E_\Gamma$ is valued in modules with a continuous action of the Lubi
 \end{lemma}
 
 
-\subsection{Picard--graded homotopy}\label{SectionPicardGradedHomotopy}
+\subsection*{Picard--graded homotopy}\label{SectionPicardGradedHomotopy}
 
 Picard--graded homotopy groups are a recurrent theme in homotopy theory.  For example, the $RO(G)$ grading in equivariant stable homotopy theory refers to the equivariant Picard grading, and the twists in twisted cohomology (e.g., twisted $K$--theory) refer to the Picard grading for parametrized spectra.  It also appears elsewhere in mathematics: in algebraic geometry, one studies sections of a line bundle on a projective variety rather than mere functions (i.e., sections of the trivial bundle) in order to recover further interesting data.  This, too, is an example of a Picard grading (and is where the phrase ``Picard grading'' comes from, as the the group of isomorphism classes of line bundles on a variety is called its Picard group).  The behavior of the appropriate analogue of Picard gradings in chromatic homotopy theory is very telling, and in this subsection we will recount some of what is known.
 
