--- a/main.tex
+++ b/main.tex
@@ -339,7 +339,7 @@ A graded ring $R$ is equivalent data to an affine scheme $\Spec R$ with an actio
 
 
 
-The other deficiencies we will investigate as we go.  In the meantime, this construction of taking ``$\Spec$'' of a cohomology ring will be so frequently useful that we give it a notation all its own.
+Deficiencies \ref{SteenrodDeficiency} and \ref{InfiniteCplxDeficiency} we will investigate next time, and deficiency \ref{SkewCommutativeDeficiency} will be something of a motif through the semester.  In the meantime, though, we will try to be content with what we have.  In fact, this construction of taking ``$\Spec$'' of a cohomology ring will be so frequently useful that we give it a notation all its own.
 
 \begin{definition}
 Let $X$ be a finite cell complex, so that $H\F_2^*(X)$ is a ring which is finite--dimensional as an $\F_2$--vector space.  We will write \[X_{H\F_2} = \Spec H\F_2P^0 X = \Spec H\F_2^* X\] for the corresponding finite affine scheme (with $\G_m$--action).
@@ -352,7 +352,7 @@ Putting this all together, we have calculated \[\RP^n_{H\Z/2} \cong \mathbb A^{1
 So far, this example just restates things we knew in a mildly different language.  Our goal now is to incorporate as much information as we have about these cohomology rings $H\F_2^* \RP^n$ into this description, which will result in us giving a more ``precise'' name for this object.  Along the way, we will also address two of our deficiencies.
 
 \begin{example}\label{RPExampleFaulty}
-Recall that $\RP^\infty$ is an $H$--space, using either the identification $\RP^\infty \simeq K(\Z/2, 1)$ and the sum on cohomology or, equivalently, the identification $\RP^\infty \simeq BO(1)$ and the tensor product of real line bundles.  In both cases, this induces a Hopf algebra diagonal \[H\F_2P^0 \RP^\infty \otimes H\F_2P^0 \RP^\infty \xleftarrow\Delta H\F_2P^0 \RP^\infty\] which we would like to analyze.  This map is determined by where it sends the class $u^{-1} x$, and because it must simultaneously respect gradings and belong to a Hopf algebra structure it is forced to take the following form: \[\Delta(u^{-1} x) = u^{-1} x \otimes 1 + 1 \otimes u^{-1} x.\]  Noticing that this is exactly the diagonal map in \Cref{InformalAdditiveGroupExample}, we tentatively\footnote{Bear in mind that we haven't yet discussed $X_{H\F_2}$ for infinite complexes $X$. We will have to modify this slightly; see \Cref{RPinftyExampleForReal}.} identify $\RP^\infty_{H\F_2}$ with the additive group: \[\RP^\infty_{H\F_2} \cong \mathbb G_a.\]
+Recall that $\RP^\infty$ is an $H$--space, using either the identification $\RP^\infty \simeq K(\Z/2, 1)$ and the sum on cohomology or, equivalently, the identification $\RP^\infty \simeq BO(1)$ and the tensor product of real line bundles.  In both cases, this induces a Hopf algebra diagonal \[H\F_2P^0 \RP^\infty \otimes H\F_2P^0 \RP^\infty \xleftarrow\Delta H\F_2P^0 \RP^\infty\] which we would like to analyze.  This map is determined by where it sends the class $u^{-1} x$, and because it must simultaneously respect gradings and belong to a Hopf algebra structure it is forced to take the following form: \[\Delta(u^{-1} x) = u^{-1} x \otimes 1 + 1 \otimes u^{-1} x.\]  Noticing that this is exactly the diagonal map in \Cref{InformalAdditiveGroupExample}, we tentatively identify $\RP^\infty_{H\F_2}$ with the additive group --- but bear in mind that we haven't yet discussed deficiency \ref{InfiniteCplxDeficiency}, so this will probably need realignment.
 \end{example}
 
 
@@ -462,7 +462,7 @@ This means that the Adams spectral sequence degenerates and this computes $\pi_*
 
 
 
-\section{Material for lecture}
+\section*{Material for lecture}
 
 
 
@@ -490,80 +490,80 @@ Make clear the distinction between $E_n$ and $\widehat{E(n)}$. Maybe explain the
 
 
 
-\section{Feb 8}
+\section*{Feb 8}
 
-\section{Feb 10}
+\section*{Feb 10}
 
-\section{Feb 12}
+\section*{Feb 12}
 
-\section{Feb 17}
+\section*{Feb 17}
 
-\section{Feb 19}
+\section*{Feb 19}
 
-\section{Feb 21}
+\section*{Feb 21}
 
-\section{Feb 24}
+\section*{Feb 24}
 
-\section{Feb 26}
+\section*{Feb 26}
 
-\section{Feb 28}
+\section*{Feb 28}
 
-\section{Mar 2}
+\section*{Mar 2}
 
-\section{Mar 4}
+\section*{Mar 4}
 
-\section{Mar 7}
+\section*{Mar 7}
 
-\section{Mar 9}
+\section*{Mar 9}
 
-\section{Mar 11}
+\section*{Mar 11}
 
-\section{Mar 21}
+\section*{Mar 21}
 
-\section{Mar 23}
+\section*{Mar 23}
 
-\section{Mar 25}
+\section*{Mar 25}
 
-\section{Mar 28}
+\section*{Mar 28}
 
-\section{Mar 30}
+\section*{Mar 30}
 
-\section{Apr 1}
+\section*{Apr 1}
 
-\section{Apr 4}
+\section*{Apr 4}
 
-\section{Apr 6}
+\section*{Apr 6}
 
-\section{Apr 8}
+\section*{Apr 8}
 
-\section{Apr 11}
+\section*{Apr 11}
 
-\section{Apr 13}
+\section*{Apr 13}
 
-\section{Apr 15}
+\section*{Apr 15}
 
-\section{Apr 18}
+\section*{Apr 18}
 
-\section{Apr 20}
+\section*{Apr 20}
 
-\section{Apr 22}
+\section*{Apr 22}
 
-\section{Apr 25}
+\section*{Apr 25}
 
-\section{Apr 27}
+\section*{Apr 27}
 
-\section{Apr 29}
+\section*{Apr 29}
 
-\section{May 2}
+\section*{May 2}
 
-\section{May 4}
+\section*{May 4}
 
 
 
 
 \newpage
 
-\section{Ideas}
+\section*{Ideas}
 \begin{enumerate}
 \item Overview of the class. (Orientations and theories of integration. Statement of the $\sigma$--orientation.)
 
@@ -619,11 +619,11 @@ Make clear the distinction between $E_n$ and $\widehat{E(n)}$. Maybe explain the
 \item Orientations and the functor $\gl_1$.
 \end{enumerate}
 
-\section{------------------------}
+\section*{------------------------}
 
 
 
-\section{Resources}
+\section*{Resources}
 
 Ando, Hopkins, Strickland (Theorem of the Cube)
 
